<resources>
    <string name="app_name">PhotoKingdom</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="auto_login">Auto-login</string>
    <string name="visitor">Visitor</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm">Confirm</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="avatar">Avatar</string>
    <string name="registration">Registration</string>
    <string name="submit">Submit</string>
    <string name="view_photowar">View photowar</string>
    <string name="userprofile">User Profile</string>
    <string name="livefeed">Live Feed</string>
    <string name="map">Map</string>
    <string name="nav_user">User</string>
    <string name="button_ok">OK</string>
    <string name="versus">vs.</string>
    <string name="winner">Winner:</string>
    <string name="settings">Settings</string>
    <string name="ping_list">Ping List</string>
    <string name="history">History</string>
    <string name="photowar_queue">Photowar Queue</string>
    <string name="attraction">Attraction</string>
    <string name="photo_album">Photo Album</string>
    <string name="attraction_photowar">Photo War</string>
    <string name="photowar_vote_resident">Vote for best %1$s</string>
    <string name="photowar_extended_vote_resident">Extended war on %1$s! Next vote determines winner!</string>
    <string name="photowar_vote_visitor">Current war on %1$s</string>
    <string name="photowar_extended_vote_visitor">Extended war on %1$s</string>
    <string name="photowar_ended">Past war on %1$s</string>
    <string name="photowar_countdown">Vote ends in %1$s</string>
    <string name="photowar_endDate">Ended on %1$s</string>
    <string name="photo_won_war_on_date">Photo won in photowar on %1$s</string>
    <string name="photo_lost_war_on_date">Photo lost in photowar on %1$s</string>
    <string name="photo">Photo</string>
    <string name="photo_currently_competing">Currently competing in Photowar!</string>
    <string name="current_photowar_points">Photowar Pts:</string>
    <string name="total_photo_points_to_date">Total cumulative Pts:</string>
    <string name="photowar_history">Photowar History</string>
    <string name="photowar_currently_ongoing">Currently ongoing!</string>
    <string name="photowar_history_for_attraction">%1$s Photowar History</string>
    <string name="winningphoto_history">Winning Photos</string>
    <string name="attraction_winningphotos">%1$s Winning Photos</string>

    <!-- Messages -->
    <string name="msg_choose_continent">Choose a continent</string>
    <string name="msg_choose_country">Choose a country</string>
    <string name="msg_choose_province">Choose a province</string>
    <string name="msg_choose_city">Choose a city</string>
    <string name="msg_choose_gender">Choose a gender</string>
    <string name="msg_required_all_information">All information is required</string>
    <string name="msg_password_not_match">Passwords do not match</string>
    <string name="msg_enter_email_password">Enter the email and password</string>
    <string name="msg_visitor_doesnot_have_profile">A visitor doesn\'t have a profile</string>
    <string name="msg_gps_data_not_in_range">GPS data not in range</string>
    <string name="msg_gps_data_not_found">GPS data not found</string>
    <string name="msg_location_permission_denied">Location permission denied</string>
    <string name="msg_storage_permission_denied">Storage permission denied</string>

    <!-- Errors -->
    <string name="error_avatar_upload">Avatar image upload failed</string>
    <string name="error_avatar_update">Avatar update failed</string>
    <string name="error_photo_upload">Photo image upload failed</string>
    <string name="error_user_register">Register failed</string>
    <string name="error_login">Login failed, try again</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="photowar_vote_finished">Voting closed!</string>

    <!-- Options for Google Places API Types -->
    <string name="type_all">All</string>
    <string name="type_museum">Museum</string>
    <string name="type_park">Park</string>
    <string name="type_natural_feature">Natural feature</string>
    <string name="type_premise">Premise</string>

</resources>
