<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.senecacollege.prj666.photokingdom.MapContainerFragment">


    <fragment
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RadioGroup
        android:id="@+id/placeTypeOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:padding="5dp"
        android:background="@color/white">

        <RadioButton
            android:id="@+id/optionAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/type_all"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/optionMuseum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_museum"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/optionPark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_park"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/optionNatural"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_natural_feature"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/optionPremise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_premise"
            android:textSize="12sp" />

    </RadioGroup>
</FrameLayout>
